--- a/css/estilos.css
+++ b/css/estilos.css
@@ -187,7 +187,13 @@ div.redes{
     display: flex; justify-content: start; flex-direction: column;
 }
 .redes{
-    width: 50px; padding: 10px;
+    width: 60px; padding: 10px;
+}
+.redes:hover{
+    scale: 1.6;transition: 0.5s;
+}
+a.redesN {
+    text-align: center;
 }
 /* propiedades formulario de contacto */
 div h2.formu{display: flex;
