--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -40,5 +40,12 @@ header div div {
     
     /*color nombre logo*/
     
-    #logo{ color: rgb(7, 107, 7);
+.tituloLogo{ color: rgb(7, 107, 7);
     }
+
+    .nav-link {
+        color: green;
+        }
+li.nav-item {
+    padding: 8px;
+}        
