--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -9,7 +9,7 @@
 .IrAtienda{
     font-size: 22px;
 }
-h3{
+h2.comprar{
     text-decoration: underline; 
     display: flex; 
     justify-content: center; 
