--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -70,3 +70,42 @@
  } 
  }
  
+ 
+ul.responsive{
+    display: none;
+  }
+  
+  @media (max-width: 480px){
+    ul.desktop {
+      display: none;
+    } 
+  }
+  
+  
+  .respon{ position: fixed;
+    display: flex; justify-content: end;
+    margin-top: 130px;
+    height: 20px;
+  }
+  .respon2{ position: absolute;
+    display: flex; justify-content: end;
+    margin-top: 90px;
+    height: 20px;
+    
+  }
+  
+  @media (min-width: 480px) {
+    .respon {
+      display: none;
+    }
+  }
+  @media (max-width: 480px){
+    h1 {
+      margin-top: 105px;
+    } 
+  }
+  @media (max-width: 480px){
+    h1.formu {
+      margin-top: 75px;
+    } 
+  }
