--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -26,3 +26,9 @@ h2{
     color:rgb(40, 126, 40) ; 
     font-size: 36px;
 }
+h1.col12 {
+    color: rgb(40, 126, 40) ; 
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+    padding: 20px;
+    }
