--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,9 +2,10 @@
 /*propiedades pie de pagina*/
 
 footer{
-    background-color: rgb(32, 105, 32);
-    margin-top: 40px;
-    b.referencia{
+     background-color: rgb(32, 105, 32);
+     background: linear-gradient(rgb(32, 105, 32), rgb(3, 167, 3));
+     margin-top: 40px;
+      b.referencia{
        padding-right: 10px; 
        font-size: 14px; 
        padding-top: 10px; 
