--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -35,17 +35,22 @@ header div div {
     
     body header div a img.logo {
         width: 150px;
-         height: 150px;
+        height: 150px;
     }
     
     /*color nombre logo*/
     
-.tituloLogo{ color: rgb(7, 107, 7);
+.tituloLogo{ 
+    color: rgb(7, 107, 7);
     }
+.titulo22{
+    color: rgb(7, 107, 7);
+}    
 
-    .nav-link {
+.nav-link {
         color: green;
         }
+        
 li.nav-item {
     padding: 8px;
 }        
