--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -8,25 +8,25 @@
 }
 @media (max-width: 480px) { 
     header div div nav ul {
-    display: flex; 
-    flex-direction: column; 
-    padding-left: 0px; 
+        display: flex; 
+        flex-direction: column; 
+        padding-left: 0px; 
 } 
 }
     
 @media (max-width: 480px) {
     header div div nav ul li a { 
-    font-size: 13px; 
-    line-height: 0%; 
-    text-align: center; 
-    padding: 1px;
+        font-size: 13px; 
+        line-height: 0%; 
+        text-align: center; 
+        padding: 1px;
      }
 } 
 
 @media (min-width: 481px) {
      header div div nav {
-    display: flex; 
-    justify-content: flex-end;
+        display: flex; 
+        justify-content: flex-end;
 }
     
 }
@@ -53,20 +53,23 @@
      }
  }
 
- @media (max-width: 480px) {footer div div b.referencia { 
-    line-height: normal;
+ @media (max-width: 480px) {
+     footer div div b.referencia { 
+       line-height: normal;
     
      }
  }
 
 
- @media (max-width: 480px){h2.historia {
-    margin-top: 100px; 
+ @media (max-width: 480px){
+     h2.historia {
+       margin-top: 100px; 
  } 
  }
 
- @media (max-width: 480px){p.cosecha {
-    margin-top: 40px; 
+ @media (max-width: 480px){
+     p.cosecha {
+       margin-top: 40px; 
  } 
  }
  
@@ -82,30 +85,47 @@ ul.responsive{
   }
   
   
-  .respon{ position: fixed;
-    display: flex; justify-content: end;
-    margin-top: 130px;
-    height: 20px;
+  .respon{position: absolute;
+      display: flex; justify-content: end;
+      margin-top: 75px;
+
   }
-  .respon2{ position: absolute;
-    display: flex; justify-content: end;
-    margin-top: 90px;
-    height: 20px;
-    
+  .respon2{ 
+      position: absolute;
+      display: flex; justify-content: end;
+      margin-top: 90px;
+      height: 20px;  
   }
+
   
   @media (min-width: 480px) {
     .respon {
       display: none;
     }
   }
+  @media (min-width: 480px) {
+    .respon2 {
+      display: none;
+    }
+  }
   @media (max-width: 480px){
     h1 {
-      margin-top: 105px;
+      margin-top: 100px;
     } 
   }
   @media (max-width: 480px){
     h1.formu {
       margin-top: 75px;
     } 
+  }
+  @media (max-width: 480px){
+    #logo {
+      margin-top: 75px;
+    } 
+  }
+
+  @media (max-width: 480px){
+    .tituloLogo{
+      display: none;
+    }
   }
