--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,15 +1,14 @@
 
 /*propiedades pie de pagina*/
 
-footer{
-     background-color: rgb(32, 105, 32);
-     background: linear-gradient(rgb(32, 105, 32), rgb(3, 167, 3));
+footer.f{
      margin-top: 40px;
       b.referencia{
        padding-right: 10px; 
        font-size: 14px; 
        padding-top: 10px; 
        padding-bottom: 10px; color: white;
-      
+       background-color: $color-principal;
+       background: linear-gradient(rgb(32, 105, 32), rgb(3, 167, 3));
   }
 }
