--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -1,8 +1,6 @@
 /*disposicion de las fotos de la tienda*/
 
-div.online{
-    margin-top: 40px;
- }
+
 
 div.tienda10{
     display: flex;
@@ -15,19 +13,16 @@ a.link {
 
 /*propiedades para los elementos debajo de las fotos de la tienda*/
 
-.imgT:hover { 
-    scale: 1.1;
-    transition: 0.3s;
-
-}
 .precio{
     text-align: center; 
     background-color: rgb(153, 243, 183);
 }
+
 div div#precio2{
     width: 100px; 
     margin: auto;
 }
+
 #carrito {
     width: 30px; 
     height: 30px; 
@@ -35,8 +30,26 @@ div div#precio2{
     margin-bottom: 15px; 
     border: 1px solid black;
 }
+
+.precio{
+    margin-top: 15px;
+}
+
+/*ANIMACIONES TIENDA*/
+
+.imgT:hover { 
+    scale: 1.1;
+    transition: 0.3s;
+}
+
 #carrito:hover{ 
     cursor: pointer; 
     scale: 1.2; 
     border: 2px solid rgb(2, 75, 35) ;
+}
+
+.precio:hover{
+    color: rgb(45, 10, 110);
+    cursor: pointer; 
+    text-decoration: underline;
 }
