--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 @import 'generales';
 @import 'header';
 @import 'body';
@@ -7,4 +8,6 @@
 @import 'tienda';
 @import 'contactos';
 @import 'medias';
+@import 'condicionales';
+@import 'mixins';
 
