--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -9,10 +9,11 @@
 }
 /*propiedades h1*/
 h1 {
-    color: rgb(40, 126, 40) ; 
+    color: $color-h1 ; 
     font-size: 50px;
     font-family: 'Roboto', sans-serif;
     padding: 20px;
+    margin-top: 50px;
     }
 
     /*propiedades h2*/
@@ -27,7 +28,7 @@ h2{
     font-size: 36px;
 }
 h1.col12 {
-    color: rgb(40, 126, 40) ; 
+    color: $color-h1; 
     font-size: 50px;
     font-family: 'Roboto', sans-serif;
     padding: 20px;
