--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -46,12 +46,21 @@
      .precio {
         margin-top: 15px;
      }
-     div.redes10 { display: flex;
-        text-align: center; 
-        margin-top: 100px; 
-        margin-bottom: 100px;
+     .redes10{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin-top: 60px;
+      margin-bottom: 40px;
      }
+     .redes20{
+      padding: 15px;
+     }
+    
  }
+ 
+ 
+
 
  @media (max-width: 480px) {
      footer div div b.referencia { 
@@ -89,7 +98,7 @@ ul.responsive{
     }
   }
   @media (min-width: 480px) {
-    .respon2 {
+    nav.navbar {
       display: none;
     }
   }
@@ -105,7 +114,7 @@ ul.responsive{
   }
   @media (max-width: 480px){
     #logo {
-      margin-top: 75px;
+      display: none;
     } 
   }
 
